--- a/Home_Service/Home_Service.csproj
+++ b/Home_Service/Home_Service.csproj
@@ -136,6 +136,12 @@
     <Compile Include="Auth.Designer.cs">
       <DependentUpon>Auth.cs</DependentUpon>
     </Compile>
+    <Compile Include="NewsEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewsEdit.Designer.cs">
+      <DependentUpon>NewsEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="nuls.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -162,6 +168,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainPage.resx">
       <DependentUpon>MainPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewsEdit.resx">
+      <DependentUpon>NewsEdit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
